fix app code